Changed the thermometer to appear to fill up all the way to the top when the temperature of the measured object exceeds the thermometer's range.
# 0.00.30 (71651) Jan 11, 2013
1/11/13 Deploying to dev for testing and review.
1st tab: Started adding representation for steam when water is at or near boiling point.
1st tab: Added a first-cut implementation of ice for when the beaker freezes.
1st tab: Added limits so that all thermal objects have a max and min temperature.  All min temperatures are 0 degrees C, max temperatures vary.
1st tab: Changed mapping function, made changes to energy chunk exchange algorithms.
1st tab: Fixed some issues with adding and removing of energy chunks when interacting with burner.  Part of making the boiling feature work.
# 0.00.29 (71440) Dec 26, 2012
12/26/12 Deploying for review by design team.
1st tab: Implemented first attempt at boiling, where the water starts exchanging all of its energy beyond the boiling temperature with the air.
2nd tab: Fixed an issue where the biker wouldn't appear to run out of energy until the thermal chunks had traveled away.
1st tab: Removed the feature where the burner disables half of the control slider when a max or min temperature is reached.
1st tab: Made the energy chunks go into or come out of the burner, rather than fading in or out.
2nd tab: Made "hidden" energy chunks in the generator appear partially faded.
# 0.00.28 (71322) Dec 14, 2012
12/14/12 Deploying for review by design team.
2nd tab: Added "hidden" energy chunks to the generator so that the mechanical chunks don't look like they disappear.
2nd tab: Made the amount of energy produced, converted, and consumed consistent across all energy systems.
2nd tab: New biker image that includes a chain.
2nd tab: Scaled solar panel to not overlap with beaker or biker.
2nd tab: Added occasional emission of thermal energy from bicycle wheel.
# 0.00.27 (70285) Nov 13, 2012
11/13/12 Deploying for review by design team.