@@ -1,4 +1,7 @@
 Changed the thermometer to appear to fill up all the way to the top when the temperature of the measured object exceeds the thermometer's range.
+Modified the thermometer to have one tick below the freezing point, one tick above the freezing point, and 10 increments between boiling and freezing.
+Added flecks to the ice in an attempt to make it look more ice-like.
+Added a representation for steam from the boiling water.
 # 0.00.30 (71651) Jan 11, 2013
 1/11/13 Deploying to dev for testing and review.
 1st tab: Started adding representation for steam when water is at or near boiling point.
